# faceless

./: .gitignore  README.md  SPEC.md  pyproject.toml
fle/: __init__.py  __main__.py  attest.py  cache.py  catalog.py  cli.py  config.py  custom.py  engine.py  errors.py  hooks.py  lockfile.py  model.py  report.py
fle/providers/: __init__.py  base.py  browser.py  disk.py  environment.py  filesystem.py  git_identity.py  hardening.py  linux.py  network.py  os_target.py  registry.py  vpn.py
schema/: opsec.schema.json  report.schema.json
tests/: test_attest.py  test_browser.py  test_bundles.py  test_config.py  test_custom.py  test_engine.py  test_hooks.py  test_linux_providers.py  test_model.py  test_os_target.py  test_providers.py
